MEM-283: in preparation for pagination on PCP, refactor all the Period statistical work to not rely on the full comment list.  Get counts across the list using aggregate functions.  Populate filter arrays with all values in the Period for Topics and Pillars, return Topics cloud tag data.  Massive speed improvements on loading the PCP list.  Improvements to come when the table data is paginated.

--- a/modules/project-comments/client/views/public-comments/list.html
+++ b/modules/project-comments/client/views/public-comments/list.html
@@ -32,7 +32,7 @@
 				<li role="presentation"><a href role="tab" data-toggle="tab" ng-click="s.toggleP('Classified')">Assigned ({{s.totalAssigned}})</a></li>
 			</ul>
 		</div>
-		<span class="pcp-comment-count-label" ng-if="!s.period.userCan.classifyComments && !s.period.userCan.vetComments">Total Comments ( )</span>
+		<span class="pcp-comment-count-label" ng-if="!s.period.userCan.classifyComments && !s.period.userCan.vetComments">Total Comments ({{s.totalPublic}})</span>
 	</div>
 	<div class="actions pull-right">
 		<button class="btn btn-default btn-sm" ng-if="s.showTopicCloud === false"
