--- a/modules/core/client/scss/components/mmti-list.scss
+++ b/modules/core/client/scss/components/mmti-list.scss
@@ -27,6 +27,23 @@
             }
         }
     }
+    &.nd-pair {
+        span {
+            &.name,
+            &.date {
+                display: block;
+                width: 50%;
+            }
+
+            &.name {
+                float: left;
+            }
+            &.date {
+                float: right;
+                text-align: right;
+            }
+        }
+    }
 }
 
 
