--- a/modules/projects/client/views/mine.html
+++ b/modules/projects/client/views/mine.html
@@ -69,7 +69,7 @@
                         <!-- Other Documents -->
                         <div class="documents tab-pane" id="docs" role="tabpanel">
                             <p class="tab-intro">Below you’ll find recent annual reports (including annual reclamation reports, annual dam safety inspection reports and related documents) as well as other select documents of interest. More documents will be added here on an ongoing basis.</p>
-                            <other-documents-list list="otherDocuments"></other-documents-list>
+                            <other-documents-list project="project"></other-documents-list>
                         </div>
                     </div>
 
