--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -57,18 +57,26 @@
 				<li><a href="http://www2.gov.bc.ca/gov/content/home/accessibility" target="_blank">Accessibility</a></li>
 			</ul>
 			<ul class="connect-links float-right">
-				<!--
-				<div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-size="small" data-mobile-iframe="true">
-					<a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Share</a>
-				</div>
-				-->
 				<li>
-					<a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse"><img src="/modules/core/client/images/facebook_circle.svg"/></a>
+					<div class="fb-share-button" data-href="https://mines.nrs.gov.bc.ca" data-layout="button" data-size="large" data-mobile-iframe="true">
+						<a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fmines.nrs.gov.bc.ca%2F&amp;src=sdkpreparse">
+							<img src="/modules/core/client/images/facebook_circle.svg"/>
+						</a>
+					</div>
 				</li>
-				<li><img src="/modules/core/client/images/twitter_circle.svg"/></li>
-				<li><img src="/modules/core/client/images/google_circle.svg"/></li>
+				<li>
+					<a class="twitter-share-button" href="https://twitter.com/share" data-show-count="false" target="_blank">
+						<img src="/modules/core/client/images/twitter_circle.svg"/>
+					</a>
+					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+				</li>
+				<li>
+					<a href="https://plus.google.com/share?url=mines.nrs.gov.bc.ca" onclick="javascript:window.open(this.href,
+					'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;"><img
+					src="/modules/core/client/images/google_circle.svg" alt="Share on Google+"/></a>
+				</li>
 			<ul>
 		</div>
 		
 	</div>
-</footer> 
+</footer>
