--- a/modules/core/client/scss/components/buttons.scss
+++ b/modules/core/client/scss/components/buttons.scss
@@ -136,3 +136,12 @@ main {
         background: $gold;
     }
 }
+
+
+// Submit Button {
+.submit-btn {
+    border-color: $gold;
+    background: $gold;
+    font-size: 0.9375rem;
+    font-weight: 700;
+}
