--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -24,6 +24,7 @@
 @import "components/tab-nav.scss";
 
 // Pages
+@import "modules/connect/client/scss/connect-with-us.scss";
 @import "modules/authorizations/client/scss/project-authorizations.scss";
 @import "modules/home/client/scss/home.scss";
 @import "modules/inspections/client/scss/project-inspections.scss";
