--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -54,7 +54,9 @@
 							<span class="dd-item-desc">Several provincial agencies work together to provide integrated oversight of British Columbia’s mines.</span></a>
 					</div>
 				</li>
-				<li class="nav-item"><a class="nav-link"><span>Connect With Us</span></a></li>
+				<li class="nav-item">
+					<a class="nav-link" ui-sref="connect-with-us"><span>Connect With Us</span></a>
+				</li>
 			</ul>
 		</div>
 	</nav>
