--- a/modules/topics/client/views/water-quality.html
+++ b/modules/topics/client/views/water-quality.html
@@ -39,7 +39,10 @@
                 <ul class="mmti-side-list">
                     <li><a href="http://www2.gov.bc.ca/gov/content/environment/air-land-water/water/water-quality" target="_blank">Water Quality (Province of BC)</a></i>
                     <li><a href="http://www2.gov.bc.ca/gov/content/environment/waste-management/industrial-waste/mining-smelting/teck-area-based-management-plan" target="_blank">Elk Valley Area Based Management Plan</a></i>
-                    <li><a href="http://www.teck.com/responsibility/our-sustainability-strategy/water/water-quality-in-the-elk-valley/" target="_blank">Water Quality in the Elk Valley (Teck) </a></i>
+                    <li><a href="http://www.ec.gc.ca/esee-eem/?CFID=344355&CFTOKEN=79421256" target="_blank">Government of Canada: Environmental Effects Monitoring</a></li>
+                    <li><a href="http://www.ec.gc.ca/esee-eem/default.asp?lang=En&n=0AFC00BC-1" target="_blank">Government of Canada: Biological Monitoring</a></li>
+                    <li><a href="http://www.ec.gc.ca/eau-water/default.asp?lang=En&n=F2F43FC7-1" target="_blank">Government of Canada: Water Quality</a></li>
+                    <li><a href="http://mend-nedem.org/default/" target="_blank">Mine Environmental Neutral Drainage</a></li>
                 </ul>
             </section>
         </aside>
