--- a/modules/core/client/scss/global/typography.scss
+++ b/modules/core/client/scss/global/typography.scss
@@ -30,3 +30,7 @@ p {
     font-size: 1rem;        //16px
     line-height: 1.75rem;
 }
+
+button, input, textarea {
+    font-family: "myriad-pro";
+}
