--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -43,7 +43,7 @@
 				<section>
 					<h4>Connect With Us</h4>
 					<p>BC Mine Information is continuously evolving. More information and features will be added to the site on an ongoing basis and we welcome feedback to help us decide what would be most valuable.</p>
-					<a class="btn slide-r-btn inverted" href="#"><span>Submit Feedback</span><i class="material-icons">arrow_forward</i></a>
+					<a class="btn slide-r-btn inverted" ui-sref="connect-with-us"><span>Submit Feedback</span><i class="material-icons">arrow_forward</i></a>
 				</section>
 			</div>
 		</div>
