--- a/modules/other-documents/client/views/project-other-document.html
+++ b/modules/other-documents/client/views/project-other-document.html
@@ -1,37 +1,35 @@
 <div ng-repeat="h in headings">
-  <section class="auth-section" ng-if="h.list.length > 0">
-    <h3>{{h.name}}</h3>
-    <div class="mmti-accord auth-list" role="tablist" aria-multiselectable="false">
-      <div class="mmti-accord-item" ng-repeat="c in h.list">
-        <!-- c is OtherDocument model element -->
-        <div class="mmti-accord-header" role="tab" id="heading-{{c._id}}">
-          <div>
-            <a data-ng-if="c.documents" class="toggle collapsed"
-               data-toggle="collapse" href="#collapse-{{c._id}}"
-               aria-expanded="true" aria-controls="collapseOne">
-              <i class="material-icons open-icon">add</i>
-              <i class="material-icons close-icon">remove</i>
-            </a>
-            <span class="ah-col name">{{c.documentName}}</span>
-            <span class="ah-col date">
-              <span>{{c.date | date:'MMM dd, yyyy'}}</span>
-            </span>
-          </div>
-        </div>
-        <div class="collapse" role="tabpanel" id="collapse-{{c._id}}" aria-labelledby="heading-{{c._id}}">
-          <div class="mmti-accord-body">
-            <div class="doc-list-container" ng-if="c.documents.length > 0">
-              <div class="mmti-list-header">Related Documents</div>
-              <ul class="mmti-list nd-pair" ng-repeat="r in c.documents">
-                <li class="nv-pair">
-                  <span class="name"><a href="{{r.ref}}" target="_blank">{{r.name}}</a></span>
-                  <span class="date">{{r.date | date:'MMM dd, yyyy'}}</span>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+	<section ng-if="h.list.length > 0">
+		<h3>{{h.name}}</h3>
+		<div class="mmti-accord mmti-doc-list" role="tablist" aria-multiselectable="false">
+			<div class="mmti-accord-item" ng-repeat="c in h.list">
+				<!-- c is OtherDocument model element -->
+				<div class="mmti-accord-header" role="tab" id="heading-{{c._id}}">
+					<div>
+						<a data-ng-if="c.documents" class="toggle collapsed" data-toggle="collapse" href="#collapse-{{c._id}}" aria-expanded="true" aria-controls="collapseOne">
+							<i class="material-icons open-icon">add</i>
+							<i class="material-icons close-icon">remove</i>
+						</a>
+						<span class="ah-col name">{{c.documentName}}</span>
+						<span class="ah-col date">
+              				<span>{{c.date | date:'MMM dd, yyyy'}}</span>
+						</span>
+					</div>
+				</div>
+				<div class="collapse" role="tabpanel" id="collapse-{{c._id}}" aria-labelledby="heading-{{c._id}}">
+					<div class="mmti-accord-body">
+						<div class="doc-list-container" ng-if="c.documents.length > 0">
+							<div class="mmti-list-header">Related Documents</div>
+							<ul class="mmti-list nd-pair" ng-repeat="r in c.documents">
+								<li class="nv-pair">
+									<span class="name"><a href="{{r.ref}}" target="_blank">{{r.name}}</a></span>
+									<span class="date">{{r.date | date:'MMM dd, yyyy'}}</span>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 </div>
