--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -40,7 +40,7 @@
 			</div>
 
 			<div class="col-md-4">
-				<section>
+				<section class="last">
 					<h4>Connect With Us</h4>
 					<p>BC Mine Information is continuously evolving. More information and features will be added to the site on an ongoing basis and we welcome feedback to help us decide what would be most valuable.</p>
 					<a class="btn slide-r-btn inverted" ui-sref="connect-with-us"><span>Submit Feedback</span><i class="material-icons">arrow_forward</i></a>
@@ -49,14 +49,14 @@
 		</div>
 
 		<div class="footer-admin clearfix">
-			<ul class="gov-links float-left">
+			<ul class="gov-links">
 				<li><a href="#">Home</a></li>
 				<li><a href="http://www2.gov.bc.ca/gov/content/home/copyright" target="_blank">Copyright</a></li>
 				<li><a href="http://www2.gov.bc.ca/gov/content/home/disclaimer" target="_blank">Disclaimer</a></li>
 				<li><a href="http://www2.gov.bc.ca/gov/content/home/privacy" target="_blank">Privacy</a></li>
 				<li><a href="http://www2.gov.bc.ca/gov/content/home/accessibility" target="_blank">Accessibility</a></li>
 			</ul>
-			<ul class="connect-links float-right">
+			<ul class="connect-links">
 				<li>
 					<div class="fb-share-button" data-href="https://mines.nrs.gov.bc.ca" data-layout="button" data-size="large" data-mobile-iframe="true">
 						<a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fmines.nrs.gov.bc.ca%2F&amp;src=sdkpreparse">
