--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -29,7 +29,7 @@
 						</a>
 						<a class="dropdown-item" ui-sref="topics">
 							<strong>Topics of Interest</strong>
-							<span class="dd-item-desc">Tailings Management, Water Quality, Reclamation &amp; Securities</span>
+							<span class="dd-item-desc">Tailings Management, Water Quality, Reclamation</span>
 						</a>
 						<a class="dropdown-item" ui-sref="projects">
 							<strong>Find Mines in BC</strong>
