--- a/modules/legislation/client/views/legislation.html
+++ b/modules/legislation/client/views/legislation.html
@@ -20,7 +20,7 @@
             <section>
                 <h3>Provincial Statutes</h3>
                 <section class="mt-0">
-                    <h4>Environmental Assessment Act</h4>
+                    <h4>Environmental Assessment Act (Environmental Assessment Office)</h4>
                     <p>The Environmental Assessment Act provides a mechanism for reviewing proposed major projects in British Columbia, including major mining projects, to assess their potential impacts. The Environmental Assessment Office (EAO) manages the assessment of proposed major projects as required by the Environmental Assessment Act.</p>
                     <ul class="content-external-links">
                         <li><a href="http://www.bclaws.ca/civix/document/id/consol14/consol14/00_02043_01">Environmental Assessment Act<i class="material-icons">open_in_new</i></a></li>
@@ -49,13 +49,12 @@
                 </section>
                 <section>
                     <h4>Environmental Management Act (Ministry of Environment)</h4>
-                    <p>The Environmental Management Act (EMA) regulates industrial and municipal waste discharge, pollution, hazardous waste and contaminated site remediation. EMA provides the authority for introducing wastes into the environment, while protecting public health and the environment. The Act enables the use of permits, regulations and codes of practice to authorize discharges to the environment and enforcement options, such as administrative penalties, orders and fines to encourage compliance. Guidelines and objectives for water quality are developed under EMA.</p>
+                    <p>The Environmental Management Act (EMA) regulates industrial and municipal waste discharge, pollution, hazardous waste and contaminated site remediation. EMA provides the authority for introducing wastes into the environment, while protecting public health and the environment. The Act enables the use of permits, regulations and codes of practice to authorize discharges to the environment and enforcement options, such as administrative penalties, orders and fines to encourage compliance. Guidelines and objectives for air and water quality are developed under EMA.</p>
                     <ul class="content-external-links">
                         <li><a href="http://www.bclaws.ca/civix/document/id/complete/statreg/03053_00" target="_blank">Environmental Management Act<i class="material-icons">open_in_new</i></a></li>
                     </ul>
                     <section>
                         <h5>Waste Discharge Regulation (Ministry of Environment)</h5>
-                        <p>The Waste Discharge Regulation identifies those industries and activities requiring authorizations to discharge under the Environmental Management Act (EMA).</p>
                         <ul class="content-external-links">
                             <li><a href="http://www.bclaws.ca/civix/document/id/complete/statreg/320_2004" target="_blank">EMA’s Waste Discharge Regulation</a></li>
                         </ul>
