--- a/modules/topics/client/views/tailings-management.html
+++ b/modules/topics/client/views/tailings-management.html
@@ -31,7 +31,7 @@
             <section class="mt-0">
                 <h4>Related Documents</h4>
                 <ul class="mmti-side-list">
-                    <li><a href="http://www2.gov.bc.ca/assets/gov/farming-natural-resources-and-industry/mineral-exploration-mining/documents/developing-a-mine/mining_dams_requirements.pdf" target="_blank">BC Mining Dams Requirements (Ministry of Energy and Mines, January 2014) </a></li>
+                    <li><a href="http://www2.gov.bc.ca/assets/gov/farming-natural-resources-and-industry/mineral-exploration-mining/documents/developing-a-mine/mou_impoundments_diversions.pdf" target="_blank">Memorandum of Understanding Regulation of Impoundments and Diversions on a Mine  Site (MEM, MOE, FLNRO)</a></li>
                 </ul>
             </section>
             <section>
