--- a/modules/connect/client/scss/connect-with-us.scss
+++ b/modules/connect/client/scss/connect-with-us.scss
@@ -17,6 +17,8 @@ form {
 
 .form-control {
     padding: 0.75rem;
-    border: 2px solid #003366;
+    border: 2px solid #EEE;
+    background: #eee;
     font-size: 0.9375rem;
+    font-weight: 400;
 }
