MEM-262 Ad-hod Edits - MMTI
- Content changes as per stakeholder request.

Additional fixes
- Centered the map marker on the mines page (thumbnail)

--- a/modules/connect/client/views/connect-with-us.html
+++ b/modules/connect/client/views/connect-with-us.html
@@ -14,7 +14,7 @@
     <div class="row">
         <main class="col-lg-8">
             <h2>Help Us Build a Better Service</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Thank you for visiting the new BC Mine Information website. More information and features will be added to this site on an ongoing basis, and the design will be continuously refined to improve user experience. Suggestions on how to make this website better can be submitted via the form below.</p>
             <form>
                 <div class="form-group">
                     <label>Your Name</label>
@@ -37,5 +37,24 @@
                 </div>
             </form>
         </main>
+        <aside class="col-lg-4">
+            <section>
+                <h4>External Links &amp; Resources</h4>
+                <ul class="mmti-list">
+                    <li>
+                        <a href="#">Ministy of Energy &amp; Mines</a>
+                    </li>
+                    <li>
+                        <a href="#">Mineral Exploration &amp; Mining</a>
+                    </li>
+                    <li>
+                        <a href="#">Ministry of Environment</a>
+                    </li>
+                    <li>
+                        <a href="#">Environmental Assessment Office</a>
+                    </li>
+                </ul>
+            </section>
+        </aside>
     </div>
 </div>
