--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -5,7 +5,7 @@
 			<div class="col-md-4">
 				<section>
 					<h4>About this website...</h4>
-					<p class="mb-0">The Ministry of Energy and Mines (MEM), Ministry of Environment (MOE), and Environmental Assessment Office (EAO) have collaborated to make information on the Province’s oversight of major mines in British Columbia accessible to the public.</p>
+					<p class="mb-0">The Ministry of Energy and Mines (MEM), Ministry of Environment (MOE), and Environmental Assessment Office (EAO) have collaborated to make information on the Province’s oversight of major mines in British Columbia accessible.</p>
 				</section>
 			</div>
 
