--- a/modules/projects/client/scss/projects.scss
+++ b/modules/projects/client/scss/projects.scss
@@ -95,6 +95,8 @@
 
     a {
         display: block;
+        padding: 0.2rem;
+        background: #EEE;
 
         img {
             width: 100%;
