--- a/modules/artifacts/client/views/artifact-display.html
+++ b/modules/artifacts/client/views/artifact-display.html
@@ -65,7 +65,7 @@
         <div class="panel panel-default">
             <!-- These need to be built out as an array of VC's attached to this artifact -->
             <table ng-table="tableParams" show-filter="false" class="table table-hover table-striped">
-                <tr ng-repeat="o in artifact.valuedComponents" ui-sref="p.vc.detail({vcId:o._id})">
+                <tr ng-repeat="o in artifact.valuedComponents" ui-sref="p.vc.detail({vcId:o._id})" class="clickable">
                     <td data-title="'Name'" filter="{'name':'text'}" sortable="'name'">{{o.title}}</td>
                     <td data-title="'Version'" filter="{'version':'text'}" class="text-center" sortable="'version'">
                         {{o.version}}
