--- a/modules/groups/client/views/group-list.html
+++ b/modules/groups/client/views/group-list.html
@@ -14,7 +14,7 @@
 	</div>
 	<div class="panel panel-default">
 		<table ng-table="tableParams" show-filter="true" class="table table-hover">
-			<tr ng-repeat="o in $data" ui-sref="p.group.detail({groupId:o._id})">
+			<tr ng-repeat="o in $data" ui-sref="p.group.detail({groupId:o._id})" class="clickable">
 				<td class="name-col"
 					header-class="'name-col'"
 					data-title="'Name'"
