--- a/modules/core/client/scss/global/header.scss
+++ b/modules/core/client/scss/global/header.scss
@@ -40,8 +40,11 @@ header {
 
         + span {
             display: none;
+            margin-top: 2px;
             margin-left: 0.25rem;
             font-size: 0.85rem;
+            font-weight: 700;
+            vertical-align: top;
         }
     }
 }
