--- a/modules/maps/client/views/map.html
+++ b/modules/maps/client/views/map.html
@@ -5,7 +5,10 @@
             <div class="brand-container float-left">
                 <a class="brand" ui-sref="home" ng-click="toggleMapHome()"></a>
             </div>
-            <button class="btn close-btn float-right" ng-click="toggleMapActive()"><i class="material-icons">close</i></button>
+            <div class="map-header-btns float-right">
+                <a class="btn" ui-sref="projects" ng-click="toggleMapHome()"><i class="material-icons">list</i></a>
+                <button class="btn close-btn" ng-click="toggleMapActive()"><i class="material-icons">close</i></button>
+            </div>
         </div>
         <!--
         <div class="action-bar">
