--- a/modules/topics/client/views/topics-of-interest.html
+++ b/modules/topics/client/views/topics-of-interest.html
@@ -17,6 +17,7 @@
                 <h2>Protecting resources for future generations</h2>
                 <p>The Province strives to ensure that all mines in British Columbia operate in a safe and environmentally responsible manner that protects heritage and other resources for future generations. This area of the BC Mine Information website profiles key topics of interest regarding mining activities in BC.</p>
             </section>
+            <hr>
             <section id="water">
                 <h3>Water Quality</h3>
                 <p>Mines that release effluent can potentially cause changes to the receiving environment. Released effluent may impact the water quality in streams, lakes and groundwater, which in turn has the potential to affect local aquatic life and/or other water uses.</p>
@@ -24,6 +25,7 @@
                     <a class="btn content-btn slide-r-btn" ui-sref="water-quality"><span>Read More</span><i class="material-icons">arrow_forward</i></a>
                 </div>
             </section>
+            <hr>
             <section>
                 <h3>Tailings Management</h3>
                 <p>Tailings are a by-product of mining. They are finely ground rock and mineral particles that remain following processing and extraction of targeted resources (e.g., minerals containing metals such as copper or gold), and they may also contain chemicals used in the extraction process.</p>
@@ -31,7 +33,8 @@
                     <a class="btn content-btn slide-r-btn" ui-sref="tailings-management"><span>Read More</span><i class="material-icons">arrow_forward</i></a>
                 </div>
             </section>
-            <section>
+            <hr>
+            <section class="last">
                 <h3>Reclamation</h3>
                 <p>Since 1969, companies have been required by law to reclaim all lands disturbed by mining and related activities in British Columbia. BC was one of the first provinces in Canada to enact mine reclamation legislation, and the first to extend this policy to exploration sites. BC’s reclamation laws ensure that land, watercourses and cultural heritage resources are returned to a safe and environmentally sound state.</p>
                 <div class="content-links">
@@ -39,6 +42,7 @@
                 </div>
             </section>
         </main>
+        <!--
         <aside class="col-lg-4">
             <section class="mt-0">
                 <h4>Related Documents</h4>
@@ -53,5 +57,6 @@
                 </ul>
             </section>
         </aside>
+        -->
     </div>
 </div>
