--- a/modules/projects/client/views/mines.list.html
+++ b/modules/projects/client/views/mines.list.html
@@ -91,16 +91,13 @@
                     <h4>External Links &amp; Resources</h4>
                     <ul class="mmti-list">
                         <li>
-                            <a href="#">Ministy of Energy &amp; Mines</a>
+                            <a href="http://www2.gov.bc.ca/gov/content/governments/organizational-structure/ministries-organizations/ministries/energy-and-mines" target="_blank">Ministy of Energy &amp; Mines</a>
                         </li>
                         <li>
-                            <a href="#">Mineral Exploration &amp; Mining</a>
+                            <a href="http://www2.gov.bc.ca/gov/content/governments/organizational-structure/ministries-organizations/ministries/environment" target="_blank">Ministry of Environment</a>
                         </li>
                         <li>
-                            <a href="#">Ministry of Environment</a>
-                        </li>
-                        <li>
-                            <a href="#">Environmental Assessment Office</a>
+                            <a href="http://www.eao.gov.bc.ca/" target="_blank">Environmental Assessment Office</a>
                         </li>
                     </ul>
                 </section>
